--- a/Editor-de-Memes/index.html
+++ b/Editor-de-Memes/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="./css/styles.css">
     <script src="https://kit.fontawesome.com/76f1588c46.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -253,5 +253,5 @@
     </aside>
 
 
-    <script src="main.js"></script>
+    <script src="./js/main.js"></script>
 </body>
